changed button on banner to Saiba Mais instead of EntreemContato

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
       <h1 id="textshadow">TradeFlora<sup>beta</sup></h1>
       <p>Um programa que promove a compensação florestal</p>
-     <%= link_to "Entre em Contato", "#anchorcontact", class: "btn btn-success button-light-shadow" %>
+     <%= link_to "Saiba Mais", "#anchorsaibamais", class: "btn btn-success button-light-shadow" %>
     </div>
   </div>
   <div style="text-align: justify;">
@@ -42,7 +42,7 @@
     <li>&nbsp;&nbsp;Incentivo a parcerias público-privadas e multissetoriais, em diversas escalas, para viabilizar o crescimento da infraestrutura nacional com menores impactos ambientais</li>
   </ol>
 
-  <hr>
+  <hr id="anchorsaibamais">
 
   <!-- feature (skew background) -->
   <div class="jumbotron jumbotron-fluid feature mb-0 pt-0" id="feature-first">
