--- a/app/views/pages/meu_perfil.html.erb
+++ b/app/views/pages/meu_perfil.html.erb
@@ -4,22 +4,22 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#areas-de-interesse">áreas de interesse</a>
+      <a class="nav-link active" data-toggle="tab" href="#areas-disponibilizadas">Áreas disponibilizadas</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#areas-disponibilizadas">áreas disponibilizadas</a>
+      <a class="nav-link" data-toggle="tab" href="#areas-de-interesse">Áreas de interesse</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#minhas-propostas">minhas propostas</a>
+      <a class="nav-link" data-toggle="tab" href="#minhas-propostas">Propostas recebidas</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#dados-cadastrais">dados cadastrais</a>
+      <a class="nav-link" data-toggle="tab" href="#dados-cadastrais">Dados cadastrais</a>
     </li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div id="areas-de-interesse" class="container tab-pane active"><br>
+    <div id="areas-de-interesse" class="container tab-pane fade"><br>
       <%if @user.trades.count > 0%>
         <div class="card-body">
           <div class="row">
@@ -53,7 +53,7 @@
         <%= link_to 'Ver áreas disponíveis', areas_path, class: "btn btn-success button-light-shadow" %>
       <%end%>
     </div>
-    <div id="areas-disponibilizadas" class="container tab-pane fade"><br>
+    <div id="areas-disponibilizadas" class="container tab-pane active"><br>
       <div class="content">
         <div class="cards">
           <%if @user.areas.count > 0%> <!--se tiver areas cadastradas, -->
