--- a/app/views/pages/meu_perfil.html.erb
+++ b/app/views/pages/meu_perfil.html.erb
@@ -83,7 +83,7 @@
     <%if @user.proposals.count > 0 %>
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <h3>Áreas de Interesse</h3>
+          <h3>Propostas Recebidas</h3>
           <table class="table table-bordered">
             <thead>
               <th>Area</th>
@@ -91,6 +91,7 @@
               <th>Interessado</th>
               <th>Email</th>
               <th>Telefone</th>
+              <th>Proposta</th>
             </thead>
             <tbody>
               <% @user.proposals.each do |proposal| %>
@@ -102,6 +103,11 @@
                 <td><%= user.name %></td>
                 <td><%= user.email %></td>
                 <td><%= user.phone_number %></td>
+                <td><%= area.trade.status %></td>
+                <td><%= link_to area_trade_path(area.id, area.trade.id), method: :delete, data: { confirm: "Recusar proposta?" } do %>
+                    <i class="fa fa-times-circle destroy_trade"></i>
+
+                  <% end %>
                 </tr>
               <% end %>
             </tbody>
