--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -1,11 +1,11 @@
+<p id="notice"><%= notice %></p>
 <div class="container">
 
-<h1>realizar trade</h1>
+<h1>Realizar trade</h1>
 <%= simple_form_for([@area, @trade], url: area_trades_path(@area)) do |f| %>
 	<%= f.hidden_field :user_id, value: current_user.id %>
 	<%= f.hidden_field :area_id, value: @area.id %>
-	<%= f.input :status, label: "Indique seu interesse" %>
-	<%= f.check_box :viewed, label: "Tenho interesse (mudar para função que agora está no status)"%>
+	<%= f.input :status, label: "Qual a sua proposta para essa área?" %>
 	<%= f.button :submit, "Registrar", class: "btn btn-success" %>
 <% end %>
 
