--- a/app/views/pages/meu_perfil.html.erb
+++ b/app/views/pages/meu_perfil.html.erb
@@ -1,4 +1,3 @@
-
 <h2>Meu perfil</h2>
   <br>
   <!-- Nav tabs -->
@@ -10,7 +9,7 @@
       <a class="nav-link" data-toggle="tab" href="#areas-disponibilizadas">áreas disponibilizadas</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#minhas-propostas">minhas propostas</a>
+      <a class="nav-link" data-toggle="tab" href="#propostas-recebidas">propostas recebidas</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#dados-cadastrais">dados cadastrais</a>
@@ -23,8 +22,8 @@
       <%if @user.trades.count > 0%>
         <div class="card-body">
           <div class="row">
-            <div class="col-sm-12 col-md-6">
-             <table class="table table-bordered">
+            <div class="col-sm-12 col-6 d-flex">
+             <table class="table">
                 <thead>
                   <th>Tamanho (m²)</th>
                   <th>Bacia</th>
@@ -35,56 +34,56 @@
                    <tbody>
                   <% @user.trades.each do |trade| %>
                     <% area = trade.area %>
-                    <tr>
-                    <td><%= area.description %></td>
-                    <td><%= area.basin.name %></td>
-                    <td><%= area.user.name %></td>
-                    <td><%= area.user.email %></td>
-                    <td><%= area.user.phone_number %></td>
-                    </tr>
+                   
+                      <tr>
+                      <td><%= area.description %></td>
+                      <td><%= area.basin.name %></td>
+                      <td><%= area.user.name %></td>
+                      <td><%= area.user.email %></td>
+                      <td><%= area.user.phone_number %></td>
+                      <td style="border-top: none"><%= link_to "Detalhes", area_path(area), class: "btn btn-success button-light-shadow" %></td>
+                      </tr>
                   <% end %>
                 </tbody>
               </table>
+
             </div>
           </div>
+          <%= link_to 'Ver outras áreas disponíveis', areas_path, class: "btn btn-success button-light-shadow" %>
         </div>
         <%else%>
         <h5> Você ainda não declarou interesse por nenhuma área </h5>
         <%= link_to 'Ver áreas disponíveis', areas_path, class: "btn btn-success button-light-shadow" %>
       <%end%>
     </div>
-    <div id="areas-disponibilizadas" class="container tab-pane fade"><br>
-      <div class="content">
-        <div class="cards">
-          <%if @user.areas.count > 0%> <!--se tiver areas cadastradas, -->
-            <% @user.areas.each do |area| %>
-            <div class="card-trip">
-              <img src="assets/<%=area.basin.name%>.jpg">
-              <div class="card-trip-infos">
-                <p class="alignright">Bacia: <%= area.basin.name %></p>
-                <h2><%= area.description %></h2>
-                <p><i class="fas fa-globe-americas"></i> Coordenadas:</p>
-                <ul>
-                  <li>
-                    Latitude: <%= area.lat.round(6) %>
-                  </li>
-                  <li>
-                    Longitude: <%= area.long.round(6) %>
-                  </li>
-                </ul>
-                <p><%= link_to "Detalhes", area_path(area), class: "btn btn-success button-light-shadow" %></p>
-              </div>
-            </div>
-          <% end %>
+    <div id="areas-disponibilizadas" class="container tab-pane fade row"><br>
+    <%if @user.areas.count > 0%> <!--se tiver areas cadastradas, --> 
+      <% @user.areas.each do |area| %>
+        <div class="card-trip">
+          <img src="assets/<%=area.basin.name%>.jpg">
+          <div class="card-trip-infos">
+            <p class="alignright">Bacia: <%= area.basin.name %></p>
+            <h2><%= area.description %></h2>
+            <p><i class="fas fa-globe-americas"></i> Coordenadas:</p>
+            <ul>
+              <li>
+                Latitude: <%= area.lat.round(6) %>
+              </li>
+              <li>
+                Longitude: <%= area.long.round(6) %>
+              </li>
+            </ul>
+            <p><%= link_to "Detalhes", area_path(area), class: "btn btn-success button-light-shadow" %></p>
+          </div>
         </div>
-      </div>
+      <% end %>
+      <br>
+        <p><%= link_to "Crie uma nova área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
     <% else %>
       <h5> Você ainda não disponibilizou nenhuma área </h5>
-      <p><%= link_to "Crie uma área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
     <% end %>
     </div>
-
-     <div id="minhas-propostas" class="container tab-pane fade"><br>
+     <div id="propostas-recebidas" class="container tab-pane fade"><br>
     <%if @user.proposals.count > 0 %>
       <div class="row">
         <div class="col-sm-12 col-md-6">
@@ -107,6 +106,7 @@
                 <td><%= user.name %></td>
                 <td><%= user.email %></td>
                 <td><%= user.phone_number %></td>
+                
                 </tr>
               <% end %>
             </tbody>
@@ -132,3 +132,4 @@
       </div>
   </div>
 </div>
+
