--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -56,6 +56,8 @@
   <%end%>
   <br>
 
+    <p> <%= link_to 'Voltar para áreas disponíveis', areas_path, class: "btn btn-success button-light-shadow" %> </p>
+
   <br>
 
 </div>
