--- a/app/views/pages/meu_perfil.html.erb
+++ b/app/views/pages/meu_perfil.html.erb
@@ -1,3 +1,4 @@
+
 <h2>Meu perfil</h2>
   <br>
   <!-- Nav tabs -->
@@ -22,8 +23,8 @@
       <%if @user.trades.count > 0%>
         <div class="card-body">
           <div class="row">
-            <div class="col-sm-12 col-6 d-flex">
-             <table class="table">
+            <div class="col-sm-12 col-md-6">
+             <table class="table table-bordered">
                 <thead>
                   <th>Tamanho (m²)</th>
                   <th>Bacia</th>
@@ -34,22 +35,18 @@
                    <tbody>
                   <% @user.trades.each do |trade| %>
                     <% area = trade.area %>
-                   
-                      <tr>
-                      <td><%= area.description %></td>
-                      <td><%= area.basin.name %></td>
-                      <td><%= area.user.name %></td>
-                      <td><%= area.user.email %></td>
-                      <td><%= area.user.phone_number %></td>
-                      <td style="border-top: none"><%= link_to "Detalhes", area_path(area), class: "btn btn-success button-light-shadow" %></td>
-                      </tr>
+                    <tr>
+                    <td><%= area.description %></td>
+                    <td><%= area.basin.name %></td>
+                    <td><%= area.user.name %></td>
+                    <td><%= area.user.email %></td>
+                    <td><%= area.user.phone_number %></td>
+                    </tr>
                   <% end %>
                 </tbody>
               </table>
-
             </div>
           </div>
-          <%= link_to 'Ver outras áreas disponíveis', areas_path, class: "btn btn-success button-light-shadow" %>
         </div>
         <%else%>
         <h5> Você ainda não declarou interesse por nenhuma área </h5>
@@ -80,14 +77,14 @@
             </div>
           <% end %>
         </div>
-      <% end %>
-      <br>
-        <p><%= link_to "Crie uma nova área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
+      </div>
     <% else %>
       <h5> Você ainda não disponibilizou nenhuma área </h5>
+      <p><%= link_to "Crie uma área", new_area_path(@area), class: "btn btn-success button-light-shadow" %></p>
     <% end %>
     </div>
-     <div id="propostas-recebidas" class="container tab-pane fade"><br>
+
+     <div id="minhas-propostas" class="container tab-pane fade"><br>
     <%if @user.proposals.count > 0 %>
       <div class="row">
         <div class="col-sm-12 col-md-6">
@@ -111,7 +108,6 @@
                 <td><%= user.name %></td>
                 <td><%= user.email %></td>
                 <td><%= user.phone_number %></td>
-
                 <td><%= area.trade.status %></td>
                 <td><%= link_to area_trade_path(area.id, area.trade.id), method: :delete, data: { confirm: "Recusar proposta?" } do %>
                     <i class="fa fa-times-circle destroy_trade"></i>
@@ -142,4 +138,3 @@
       </div>
   </div>
 </div>
-
